2003-10-09  Dominique Devriese  <devriese@kde.org>

	* make the New Script Wizard give an error when the script does
	not generate a valid ObjectImp.

	* fix some issues with the escaping of an & in a translatable
	string in an xml file

	* fix the generation of the pot translation template file

	* fix a problem with the order of arguments in ScalingOverLineType
	causing a test file to not be loaded correctly..

	* update some test files to the new ( post-0.4 ) kig file format.

	* add ( sometimes placeholder ) icons for the remaining actions
	that missed icons ( thanks to Maurizio Paolini )

2003-09-08  Dominique Devriese  <devriese@kde.org>

	* Fix a bug that prevented Kig from opening its own files,
	rejecting them because they were of the 0.6.0 version, which Kig
	could not open..  I'm backporting this into Kig 0.6.0 and
	informing the packager..

	* clean up: Objects now store their parents in order, so that no
	parsing has to be done in the calc() function..  Also some more
	modifications making that function a bit simpler are included.
	Specifically, ArgsParser now does the checking of the arguments,
	instead of every single calc function doing it itself..

2003-09-02  Dominique Devriese  <devriese@kde.org>

	* rename ArgparserObjectType to ArgsParserObjectType

	* remove ArgsChecker class, and rename ArgParser to ArgsParser

2003-09-02  Dominique Devriese  <devriese@kde.org>

	* branch off Kig 0.6.0

2003-09-01  Dominique Devriese  <devriese@kde.org>

	* only move an object if its parents are not yet moving..  This
	fixes bug #63250.

	* remove the defective operator| and operator& implementations for
	the Objects class
	
2003-08-31  Dominique Devriese  <devriese@kde.org>

	* make the Kig Python Scripting API docs only available online.
	It's too much trouble to generate them during the build process,
	and I can't add a hard build-time dependency on doxygen anyway...

	* keep the Kig version number in a central place, so that it can